<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in_form"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="@null"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:padding="8dp" />

    <View
        android:id="@+id/usernameLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/usernameInput"
        android:background="#CCCCCC" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameLine"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@null"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="8dp" />

    <View
        android:id="@+id/passwordLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/passwordInput"
        android:background="#CCCCCC" />

    <TextView
        android:id="@+id/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordLine"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/create_account" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createAccountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/or" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/orText"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:text="@string/sign_in"
        android:textColor="@color/black" />

</RelativeLayout> 